src/test/ui/issues/issue-69683.stderr
error[E0308]: mismatched types
  --> $DIR/issue-69683.rs:30:14
   |
LL |     0u16.foo(b);
   |          --- ^ expected `u8`, found array `[u8; 3]`
   |          |
   |          arguments to this function are incorrect
   |
note: associated function defined here
  --> $DIR/issue-69683.rs:17:8
   |
LL |     fn foo(self, x: <u8 as Element<I>>::Array);
   |        ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
